--- a/src/containers/header/header-hero_btns.css
+++ b/src/containers/header/header-hero_btns.css
@@ -28,6 +28,7 @@
   background: #ffffff;
   backdrop-filter: blur(10px);
   border-radius: 50%;
+  cursor: pointer;
 }
 .header-hero-carousel-btn-tochka.active {
   background: #ffffff;
