--- a/src/containers/header/header-hero_title.css
+++ b/src/containers/header/header-hero_title.css
@@ -1,5 +1,8 @@
 @import url(https://fonts.googleapis.com/css2?family=Rubik:wght@100;200;300;400;500;600;800;900&display=swap);
-
+.header-hero-title-component {
+  margin: 0;
+  padding: 0;
+}
 .header-hero-title {
   font-family: "Rubik", sans-serif;
   font-style: normal;
@@ -9,6 +12,8 @@
   /* identical to box height, or 125% */
   color: white;
   letter-spacing: 0.005em;
+  margin: 0;
+  padding: 0;
   margin-top: 24px;
 }
 .season-3 {
