--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,10 +1,9 @@
 .home {
   width: 100%;
-  height: 100vh;
+  height: 80vh;
   display: flex;
   flex-direction: column;
-  /* background-color: gray; */
-  background-image: linear-gradient(transparent, black),
+  background-image: linear-gradient(transparent, #0d0c0f),
     url("../../assets/Mandalorian.png");
   background-repeat: no-repeat;
   background-position: center;
